# GNN2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  plot_training_log.py  pyproject.toml  vocab.json
api/: inference.py  main.py
checkpoints/: training_log.csv
checkpoints_1/: training_log.csv
checkpoints_2/: training_log.csv
checkpoints_3/: training_log.csv
checkpoints_4/: training_log.csv
checkpoints_5/: training_log.csv
checkpoints_6/: training_log.csv
checkpoints_7/: training_log.csv
checkpoints_8/: training_log.csv
frontend/: app.js  index.html  style.css
output/: equation_20251213_130530.tex  equation_20251213_130708.tex  equation_20251213_130724.tex  equation_20251213_130755.tex  equation_20251213_133737.tex  equation_20251213_133812.tex
src/: config.py  temp.lg  test.py  train.py  vocab.json
src/gnn_model/: __init__.py  decoder_gnn.py  encoder_gnn.py  graph_to_graph.py  inference.py
src/scripts/: build_lg.py  coba.py
src/source_graph/: __init__.py  edge_features.py  gnn_input.py  node_features.py  visualizations.py
src/target_graph/: __init__.py  ground_truth.py
src/utils/: build_vocab.py
