[project]
name = "gnn-project"
version = "0.1.0"
description = "Graph Neural Networks project with PyTorch and PyTorch Geometric"
requires-python = "==3.10.*"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "networkx>=3.2.0",
    "torch-geometric>=2.5.0",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
]

[tool.uv]
# Install PyTorch with CUDA 12.4
find-links = [
    "https://download.pytorch.org/whl/cu124",
    "https://data.pyg.org/whl/torch-2.4.0+cu124.html"
]

# Don't try to build as editable package
package = false
